Add generateStaticParams & implement ListCompanyIds
